# data_to_header_string

./: CMakeLists.txt  Makefile  Makefile.am  README.md  build.ninja  configure.ac  convert.c  convert.h  d2h_convert.c  d2h_convert.h  example.c  example1.txt  example2.txt  main.c  make_specialescapes.c  specialescapes.c  test.c  testappend.c  whatish.c
